# ietf-sd-cwt

./: .gitignore  Cargo.toml  README.md
sd-cwt/: Cargo.toml  build.rs
sd-cwt-types/: Cargo.toml
sd-cwt-types/rust/: Cargo.toml
sd-cwt-types/rust/src/: cbor_encodings.rs  lib.rs  serialization.rs
sd-cwt/src/: input.rs  lib.rs  main.rs  types.rs
sd-cwt/tests/: e2e.rs
src/: error.rs  input.rs  lib.rs
tests/data/: sd-cwt.cbor-diag
