[package]
name = "sd-cwt"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cddl-codegen = { git = "https://github.com/dcSpark/cddl-codegen.git" }
reqwest = { version = "0.12", features = ["blocking"] }

cbor_event = "2.4.0"
# we don't update due to https://github.com/anweiss/cddl/issues/222
cddl = "=0.9.1"
clap = { version = "4.3.12", features = ["derive"] }
codegen = { git = "https://github.com/dcSpark/codegen", branch = "master" }
once_cell = "1.18.0"
nom = "7.1.1"
pathdiff = "0.2.1"
which = { version = "4.4.0", optional = true, default-features = false }
syn = "2.0.16"
quote = "1.0.31"


[dependencies]
jwt-simple = { version = "0.12", features = ["cwt", "ciborium"] }
cddl = "0.9"
cddl-cat = "0.6"

